[package]
name = "my-website"
version = "1.0.0"
authors = ["Matei Pralea <matei@pralea.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "web_screen_reader",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

